@@ -1,13 +1,13 @@
 package com.dg.bsm.books.service;
 
-import com.dg.bsm.books.persistence.entity.BookEntity;
-import com.dg.bsm.books.persistence.repository.BookRepository;
-import com.dg.bsm.books.domain.BookInfo;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
+import com.dg.bsm.books.domain.BookInfo;
+import com.dg.bsm.books.domain.BookInfoPage;
+import com.dg.bsm.books.persistence.entity.BookEntity;
+import com.dg.bsm.books.persistence.repository.BookRepository;
 
 @Service
 public class BookInfoService {
@@ -18,20 +18,17 @@ public class BookInfoService {
         this.bookRepository = bookRepository;
     }
 
-    public List<BookInfo> getAllBooks(){
-        return bookRepository.findAll().stream().map(this::convertToRecord).collect(Collectors.toList());
+    public BookInfoPage getAllBooks(int pageNumber, int pageSize) {
+
+        var pageable = PageRequest.of((pageNumber<1?0:pageNumber-1), pageSize, Sort.Direction.DESC, "publishedDate");
+        var page = bookRepository.findAll(pageable);
+        var bookInfos = page.getContent().stream().map(this::convertToRecord).toList();
+        return new BookInfoPage(page, bookInfos);
     }
-
-    private List<BookInfo> convertToRecords(List<BookEntity> books) {
-        List<BookInfo> res = new ArrayList<>();
-        return books.stream().map(this::convertToRecord).collect(Collectors.toList());
-    }
-
-
 
     public BookInfo addNewBook(BookInfo bookInfo) {
         BookEntity entity = convertFromRecord(bookInfo);
-        return  convertToRecord(bookRepository.save(entity));
+        return convertToRecord(bookRepository.save(entity));
     }
 
     private BookEntity convertFromRecord(BookInfo bookInfo) {
@@ -59,6 +56,5 @@ public class BookInfoService {
                 bookEntity.getAuthors(),
                 bookEntity.getCategories());
     }
-
 
 }
